Fixed layout issue in my apps

--- a/features/appmgt/org.wso2.carbon.appmgt.store.feature/src/main/resources/store/themes/store/css/custom-styles.css
+++ b/features/appmgt/org.wso2.carbon.appmgt.store.feature/src/main/resources/store/themes/store/css/custom-styles.css
@@ -380,6 +380,7 @@
 
 .right-sidebar{
     padding-top: 10px;
+    padding-left: 30px;
 }
 
 
